                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 04-06-2006 fixed: Excessive harddisk usage due to constant texture allocation/deallocation in UI calibration screen.
 - 03-06-2006 changed: Cleaned up audioscrobbler loglevels.
 - 03-06-2006 fixed: Shoutcast directory and internetstreams in playlists was broken.
 - 03-06-2006 fixed: [ 1489324 ] itunes music share doesn't properly display.
 - 03-06-2006 changed: Cleaned up the playlist player state code.
 - 03-06-2006 changed: Allowed PlayerControl(RepeatAll), PlayerControl(RepeatOne) and PlayerControl(RepeatNone) to be used instead of just the toggle version.
 - 03-06-2006 changed: Playlists now act like folders in all views.  Revert to the old behaviour using <playlistasfolders> in advancedsettings.xml
 - 03-06-2006 fixed: No alternate label was available for the togglebutton.  Use <altlabel>.
 - 03-06-2006 changed: Moved ReadString() to CFile (removes duplicate code).
 - 03-06-2006 fixed: Window.IsActive could reset to true at the end of a long control-based windowclose animation.
 - 02-06-2006 changed: Updated Python ControlLabel to accept angle parameter, thanks to Nuka1195.
 - 02-06-2006 fixed: [ 1472413 ] Xlink: Hosting twice should not be possible
 - 02-06-2006 fixed: my programs used my videos shares for startup parameter determination.
 - 02-06-2006 fixed: Lock Settings in context menu was broken
 - 02-06-2006 fixed: Settings and Filemanager lock was broken
 - 02-06-2006 added: hidden gui setting videfiles.hidedirectorynames due to wide public demand =). set to true using advancedsettings.xml
 - 01-06-2006 changed: order of icon and time in xbmc.notification. syntax is now xbmc.notification(header,message,time,icon).